# SourceFilterNeuralFormants

./: .gitattributes  .gitignore  .gitmodules  README.md  environment.yml  inference_from_list.py  inference_from_list_e2e_hifigan.py  inference_from_list_e2e_v2.py  inference_hifigan.py  inference_hifiglot.py  pyproject.toml  requirements.txt  train_e2e_DDSPNF.py  train_e2e_hifigan.py  train_e2e_hifiglot.py  train_e2e_v2.py  train_gelp.py
Neural_formant_synthesis/: Dataset.py  feature_extraction.py  functions.py  models.py  vctk_preprocessing.py
Neural_formant_synthesis/sigproc/: lpc.py
config/: config_v3.json
hifi_gan/: inference.py  meldataset.py  models.py
src/neural_formant_synthesis/: dataset.py  feature_extraction.py  models.py  vctk_preprocessing.py
src/neural_formant_synthesis/glotnet/model/feedforward/: activations.py  convolution.py  convolution_layer.py  convolution_stack.py  wavenet.py
src/neural_formant_synthesis/glotnet/sigproc/: allpole.py  biquad.py  emphasis.py  levinson.py  lfilter.py  lpc.py  lsf.py  melspec.py  oscillator.py
src/neural_formant_synthesis/sigproc/: levinson.py  lpc.py
tests/: test_dataset.py  test_train_imports.py
